# cstudy

./: .gitignore  README
libraries/: README
libraries/common/: .gitignore  AUTHORS  Makefile.am  README  configure.ac
libraries/common/include/: bytestream.h  datastream.h  stringutil.h
libraries/common/src/: bytestream.c  datastream.c  stringutil.c
libraries/common/test/: commontest.c
libraries/cryptsupport/: README
libraries/cryptsupport/src/: certificate.c
libraries/dom4c/: .gitignore  AUTHORS  Makefile.am  README  configure.ac
libraries/dom4c/include/: dom4c.h  stack.h
libraries/dom4c/libs/: .gitignore
libraries/dom4c/libs/expat-2.1.0/: expat_ios_config.h  libtool
libraries/dom4c/libs/expat-2.1.0/examples/: elements  outline
libraries/dom4c/libs/expat-2.1.0/xmlwf/: ct.c  xmlwf
libraries/dom4c/src/: dom4c.c  stack.c
libraries/dom4c/test/: Makefile.am  domtest  domtest.c  testdefine.h
libraries/httpsupport/: .gitignore  Makefile.am  README  configure.ac
libraries/httpsupport/include/: cookie.h  cookiemanager.h  httpclient.h  httpheader.h  httpparameter.h  httprequest.h  httpresponse.h  keypair.h  socketclient.h  stringhashtable.h  stringutil.h  urlsupport.h
libraries/httpsupport/src/: cookie.c  cookiemanager.c  httpclient.c  httpheader.c  httpparameter.c  httprequest.c  httpresponse.c  keypair.c  socketclient.c  stringhashtable.c  stringutil.c  urlsupport.c
libraries/httpsupport/test/: Makefile.am  httptest  httptest.c
libraries/oauth/: README
prog/: README
