noinst_LIBRARIES = libhttpsupport.a
libhttpsupport_a_SOURCES = src/urlsupport.c src/httpheader.c src/cookie.c src/keypair.c src/httprequest.c src/httpresponse.c src/stringhashtable.c src/cookiemanager.c src/socketclient.c
INCLUDES = -I$(top_srcdir)/include -I$(top_srcdir)/../common/include
SUBDIRS = ../common
